--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@ body {
 .logout-link {
   cursor: pointer;
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
