--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 html {
   position: relative;
   min-height: 100%;
+
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
+  color: white;
 }
 .footer {
   position: absolute;
@@ -13,7 +15,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-/*  This is a experiment */
+/*  This is an experiment */
 
 .App {
   text-align: center;
@@ -53,3 +55,4 @@ body {
     transform: rotate(360deg);
   }
 }
+
