content and styling

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .Card {
     border-style: solid;
-    border: #19466B;
-    background-color: #19466b;
+    border: #c0c0c0;
+    background-color: #c0c0c0;
     height: 100px;
     width: 100px;
     border-radius: 5px;
