--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
-  color: white;
+  color: whitesmoke;
 }
 .footer {
   position: absolute;
